--- a/index.html
+++ b/index.html
@@ -6,7 +6,14 @@
         <script type="text/javascript" src="js/app.js"></script>
     </head>
     <body>
-        <div class = "sliding-row">
-        </div>
+            <div class="form-group">
+                <label for="numRows">Enter Number of Rows:</label>
+                <input type="number" class="form-control" id="numRows" max="6" min="1" >
+            </div>
+            <div class="form-group">
+                <label for="numCols">Enter Number of Columns:</label>
+                <input type="number" class="form-control" id="numCols" max="6" min="1">
+            </div>
+            <button onclick="Initialise()" class="btn btn-primary">Submit</button>
     </body>
 </html>
