--- a/index.html
+++ b/index.html
@@ -8,11 +8,11 @@
     <body>
             <div class="form-group">
                 <label for="numRows">Enter Number of Rows:</label>
-                <input type="number" class="form-control" id="numRows" max="6" min="1" >
+                <input type="number" class="form-control" id="numRows" max="6" min="1" value="5" >
             </div>
             <div class="form-group">
                 <label for="numCols">Enter Number of Columns:</label>
-                <input type="number" class="form-control" id="numCols" max="6" min="1">
+                <input type="number" class="form-control" id="numCols" max="6" min="1" value="5">
             </div>
             <button onclick="Initialise()" class="btn btn-primary">Submit</button>
     </body>
