--- a/index.html
+++ b/index.html
@@ -3,7 +3,6 @@
     <head>
         <link rel="stylesheet" type="text/css" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css">
         <link rel="stylesheet" type="text/css" href="css/style.css">
-        <script type="text/javascript" src="js/app.js"></script>
     </head>
     <body>
             <div class="form-group">
@@ -14,6 +13,8 @@
                 <label for="numCols">Enter Number of Columns:</label>
                 <input type="number" class="form-control" id="numCols" max="6" min="1" value="5">
             </div>
-            <button onclick="Initialise()" class="btn btn-primary">Submit</button>
+            <button id="submit"  class="btn btn-primary">Submit</button>
     </body>
+    <script type="text/javascript" src="js/app.js"></script>
+
 </html>
